Revise README with comprehensive project details
Expanded the README to include detailed features, project structure, license management, and usage instructions.